[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

# Protobuf and gRPC
tonic = "0.12.3"
prost = "0.13.5"

# Crypto
crypto-common = { version = "0.1.6", features = ["rand_core"] }
aes = "0.8.4"
cbc = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"

# Hash
hmac = "0.12.1"
sha2 = "0.10.8"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.13"

rmp = "0.8.14"

# Logging
log = "0.4.26"
env_logger = "0.10"

[features]
default = ["alloc"]
alloc = []

[build-dependencies]
tonic-build = "0.12.3"

[[example]]
name = "tcp-server"
path = "examples/tcp_server.rs"

[[example]]
name = "tcp-client"
path = "examples/tcp_client.rs"

[[example]]
name = "link-client"
path = "examples/link_client.rs"

[[example]]
name = "kaonic-client"
path = "examples/kaonic_client.rs"
