[package]
name = "reticulum"
version = "0.3.5"
edition = "2024"
authors = ["github.com/BeechatNetworkSystemsLtd", "github.com/pepa65"]
description = "Reticulum in Rust"
repository = "https://github.com/pepa65/reticulum-rs"
readme = "README.md"
license = "MIT"

[[bin]]
name = "kaonic-client"
path = "examples/kaonic_client.rs"

[[bin]]
name = "kaonic-mesh"
path = "examples/kaonic_mesh.rs"

[[bin]]
name = "kaonic-tcp-mesh"
path = "examples/kaonic_tcp_mesh.rs"

[[bin]]
name = "udp-link"
path = "examples/udp_link.rs"

[[bin]]
name = "link-client"
path = "examples/link_client.rs"

[[bin]]
name = "tcp-client"
path = "examples/tcp_client.rs"

[[bin]]
name = "tcp-server"
path = "examples/tcp_server.rs"

[[bin]]
name = "testnet-client"
path = "examples/testnet_client.rs"

[dependencies]
# Protobuf and gRPC
tonic = "0.13.0"
prost = "0.13"

# Crypto
crypto-common = { version = "0.1.6", features = ["rand_core"] }
aes = "0.8.4"
cbc = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"

# Hash
hmac = "0.12.1"
sha2 = "0.10.8"

# Random Number generator
rand_core = { version = "0.6", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

rmp = "0.8.14"
serde = { version = "1.0.219", features = ["derive"] }

# Logging
log = "0.4.27"
env_logger = "0.11"

[features]
default = ["alloc"]
alloc = []

[build-dependencies]
tonic-build = "0.13.0"
